fix some layout problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,7 +160,7 @@ body{
 }
 
 .search_category{
-    margin-top: 1px;
+    margin-top: 5px;
     width: 400px;
     overflow: auto;
     filter: drop-shadow(0px 0px 20px #AABBCC);
@@ -303,7 +303,7 @@ body{
 .details_upper{    
     border-radius: 5px;
     position: absolute;
-    bottom: 43px;
+    bottom: 45px;
     /* width: 270px; */
     width: 100%;
     height: 40px;
